Fix flex-wrap

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   top: 0;
   left: 0;
   right: 0;
+  flex-wrap: wrap;
 }
 
 .App__category {
